crates/tesshir/tests/fixtures/check/missing_impl_method.golden
Error: check/missing_impl_method.tess:7:1: impl for `Reader` is missing method `read`
