crates/tesshir/tests/fixtures/check/missing_impl_method.tess
interface Reader {
    fn read(self: &Self) -> i32;
}

struct File {}

impl Reader for File {}
